--- a/pages/task.html
+++ b/pages/task.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <title>Todo App - Add Task</title>
   <link rel="stylesheet" href="../assets/fontawesome-icons/css/all.min.css">
   <link rel="stylesheet" href="../style/common.css">
