Fixed task page responsiveness and a typo

--- a/pages/task.html
+++ b/pages/task.html
@@ -22,7 +22,7 @@
     </header>
 
     <main class="main">
-      <div class="cart">
+      <div class="card">
         <h2 class="heading">Task: <span>Demo Task</span></h2>
         <table>
           <tbody>
