--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -1,25 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <title>Todo App - Add Task</title>
-  <link rel="stylesheet" href="../style/add-task/add-task.css">
+  <title></title>
 </head>
 <body>
-  <header id="header">
-    <div class="header-container">
-      <div class="angle js-back-btn">
-        <i class="fa-solid fa-angle-left"></i>
-      </div>
-      <div class="text">Add New Task</div>
-      <div class="user">
-        <div><i class="fa-solid fa-user user-icon"></i></div>
-        <span class="tooltip">User</span>
-      </div>
-    </div>
-  </header>
-
   <main class="main">
     <div class="form" id="form">
       <div id="emoji-picker">
@@ -156,8 +140,5 @@
       <span>Profile</span>
     </button>
   </nav>
-
-  <script type="module" src="../src/add-task/add-task.js"></script>
-  <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
 </body>
 </html>
