--- a/pages/categories.html
+++ b/pages/categories.html
@@ -1,44 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <title>Todo App - Categories</title>
-  <link rel="shortcut icon" href="../assets/images/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../style/categories/categories.css">
-  <link rel="stylesheet" href="../style/categories/edit-category.css">
+  <title></title>
 </head>
-
 <body>
-  <header id="header">
-    <div class="header-container">
-      <div class="angle js-back-btn">
-        <i class="fa-solid fa-angle-left"></i>
-      </div>
-      <div class="text">Add New Task</div>
-      <div class="user">
-        <div><i class="fa-solid fa-user user-icon"></i></div>
-        <span class="tooltip">User</span>
-      </div>
-    </div>
-  </header>
-
   <main class="main">
-    <div class="old-categories">
-      <!-- <div class="item">
-        <div class="item-left">
-          <span class="item-emoji">🏢
-          </span>
-          <span class="name">Work</span>
-          <span class="percent">(33%)</span>
-        </div>
-        <div class="item-right">
-          <span class="edit"><i class="fa-solid fa-pen"></i></span>
-          <span class="delete"><i class="fa-solid fa-trash"></i></span>
-        </div>
-      </div> -->
-    </div>
+    <div class="old-categories"></div>
 
     <div class="new-ctgry">
       <h2>Add New Category</h2>
@@ -102,43 +69,7 @@
 
       <button class="enable" id="create-btn">Create Category</button>
     </div>  
-
   </main>
-
-  <nav id="navbar">
-    <button class="tasks">
-      <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="TaskAltIcon">
-        <path
-          d="M22 5.18 10.59 16.6l-4.24-4.24 1.41-1.41 2.83 2.83 10-10zm-2.21 5.04c.13.57.21 1.17.21 1.78 0 4.42-3.58 8-8 8s-8-3.58-8-8 3.58-8 8-8c1.58 0 3.04.46 4.28 1.25l1.44-1.44C16.1 2.67 14.13 2 12 2 6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10c0-1.19-.22-2.33-.6-3.39z">
-        </path>
-      </svg>
-      <span>Tasks</span>
-      <span class="count">2</span>
-    </button>
-
-    <button class="categories selected">
-      <i class="fa-solid fa-shapes"></i>
-      <span>Categories</span>
-    </button>
-
-    <button class="add">
-      <i class="fa-solid fa-plus"></i>
-    </button>
-
-    <button class="transfer">
-      <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="GetAppRoundedIcon">
-        <path
-          d="M16.59 9H15V4c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v5H7.41c-.89 0-1.34 1.08-.71 1.71l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.63-.63.19-1.71-.7-1.71M5 19c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H6c-.55 0-1 .45-1 1">
-        </path>
-      </svg>
-      <span>Transfer</span>
-    </button>
-
-    <button class="profile">
-      <i class="fa-solid fa-user"></i>
-      <span>Profile</span>
-    </button>
-  </nav>
 
   <div class="edit-category">
     <h3 class="edit-header">Edit Category</h3>
@@ -218,10 +149,6 @@
     </div>
   </div>
   <div id="dlt-bg"></div>
-
-
-  <script type="module" src="../src/categories/categories.js"></script>
-  <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
 </body>
 
 </html>
