Organize js codes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header id="header" style="display: none;">
     <div class="header-container">
-      <div class="angle js-back-btn">
+      <div class="angle">
         <i class="fa-solid fa-angle-left"></i>
       </div>
       <div class="text"><!-- Add New Task --></div>
