--- a/demo-pages/profile.html
+++ b/demo-pages/profile.html
@@ -1,5 +1,27 @@
-export const profileHtml = 
-`
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Todo App - User</title>
+  <link rel="stylesheet" href="../style/index.css">
+  <link rel="stylesheet" href="../style/profile/profile.css">
+</head>
+<body>
+  <header id="header" style="display: flex;">
+    <div class="header-container">
+      <div class="angle">
+        <i class="fa-solid fa-angle-left"></i>
+      </div>
+      <div class="text">User Profile</div>
+      <div class="user">
+        <div><i class="fa-solid fa-user user-icon"></i></div>
+        <span class="tooltip">User</span>
+      </div>
+    </div>
+  </header>
+
+
   <main class="main">
     <div class="cart">
       <div class="profile">
@@ -42,7 +64,7 @@ export const profileHtml =
         </li>
         <li data-type="1" class="border type1">
         </li>
-        <li data-type="1" data-selected="true" class="border type1">
+        <li data-type="1" class="border type1">
           <span class="check-icon">
             <i class="fa-solid fa-check"></i>
           </span>
@@ -92,4 +114,33 @@ export const profileHtml =
 
       <div id="blur-bg"></div>
   </main>
-`;
+
+    
+  <nav id="navbar">
+    <button class="tasks">
+      <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24"><path d="M22 5.18 10.59 16.6l-4.24-4.24 1.41-1.41 2.83 2.83 10-10zm-2.21 5.04c.13.57.21 1.17.21 1.78 0 4.42-3.58 8-8 8s-8-3.58-8-8 3.58-8 8-8c1.58 0 3.04.46 4.28 1.25l1.44-1.44C16.1 2.67 14.13 2 12 2 6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10c0-1.19-.22-2.33-.6-3.39z"></path></svg>
+      <span>Tasks</span>
+      <span class="count">2</span>
+    </button>
+  
+    <button class="categories">
+      <i class="fa-solid fa-shapes"></i>
+      <span>Categories</span>
+    </button>
+  
+    <button class="add">
+      <i class="fa-solid fa-plus"></i>
+    </button>
+  
+    <button class="transfer">
+      <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24"><path d="M16.59 9H15V4c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v5H7.41c-.89 0-1.34 1.08-.71 1.71l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.63-.63.19-1.71-.7-1.71M5 19c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H6c-.55 0-1 .45-1 1"></path></svg>
+      <span>Transfer</span>
+    </button>
+  
+    <button class="profile">
+      <i class="fa-solid fa-user"></i>
+      <span>Profile</span>
+    </button>
+  </nav>
+</body>
+</html>
