Implement theme switching feature

--- a/demo-pages/home.html
+++ b/demo-pages/home.html
@@ -55,7 +55,7 @@
         <div class="empty">
           <h3>No tasks found</h3>
           <p>Try searching with different keywords.</p>
-          <svg width="172.8" height="347.20000000000005" viewBox="0 0 261 434" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="130.837" cy="34.2327" r="26.7209" stroke="var(--secondary-color)" stroke-width="14"></circle><rect y="51.7676" width="261" height="381.721" rx="45" fill="var(--secondary-color)" fill-opacity="0.6"></rect><rect x="26.9767" y="80.0928" width="207.047" height="325.07" rx="35" fill="white" fill-opacity="0.9"></rect><rect x="64.7442" y="176.535" width="132.186" height="132.186" rx="66.093" fill="var(--secondary-color)"></rect><rect x="95.0707" y="268.856" width="87.6744" height="13.4884" rx="6.74419" transform="rotate(-45 95.0707 268.856)" fill="#f0f0f0"></rect><rect x="104.608" y="206.861" width="87.6744" height="13.4884" rx="6.74419" transform="rotate(45 104.608 206.861)" fill="#f0f0f0"></rect><rect x="77.5581" y="36.9307" width="106.558" height="56.6512" rx="18" fill="var(--secondary-color)"></rect></svg>
+          <svg width="172.8" height="347.20000000000005" viewBox="0 0 261 434" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="130.837" cy="34.2327" r="26.7209" stroke="var(--secondary)" stroke-width="14"></circle><rect y="51.7676" width="261" height="381.721" rx="45" fill="var(--secondary)" fill-opacity="0.6"></rect><rect x="26.9767" y="80.0928" width="207.047" height="325.07" rx="35" fill="white" fill-opacity="0.9"></rect><rect x="64.7442" y="176.535" width="132.186" height="132.186" rx="66.093" fill="var(--secondary)"></rect><rect x="95.0707" y="268.856" width="87.6744" height="13.4884" rx="6.74419" transform="rotate(-45 95.0707 268.856)" fill="#f0f0f0"></rect><rect x="104.608" y="206.861" width="87.6744" height="13.4884" rx="6.74419" transform="rotate(45 104.608 206.861)" fill="#f0f0f0"></rect><rect x="77.5581" y="36.9307" width="106.558" height="56.6512" rx="18" fill="var(--secondary)"></rect></svg>
         </div>
       </div>
   
@@ -342,7 +342,7 @@
             </div>
           </div>
           <div class="select-clr">
-            <span class="clr-code">#7E30E1</span>
+            <span class="clr-code">var(--secondary)</span>
             <div class="clr-options">
               <button>
                 <i class="fa-solid fa-check"></i>
