--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Todo App</title>
   <link rel="shortcut icon" href="./assets/images/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="style/index.css">
+  <style id="theme"></style>
 </head>
 <body>
   <header id="header" style="display: none;">
@@ -109,5 +110,6 @@
   </nav>
   
   <script type="module" src="src/app.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
 </body>
 </html>
