--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       </div>
       <div class="text"><!-- Add New Task --></div>
       <div class="user">
-        <div><i class="fa-solid fa-user user-icon"></i></div>
-        <span class="tooltip">User</span>
+        <div class="js-profile-pic">
+        </div>
+        <span class="tooltip js-user-name">User</span>
       </div>
     </div>
   </header>
@@ -74,7 +75,11 @@
 
       <span class="sidebar-break"></span>
 
-      <li class="sidebar-user" href="#"><div><span>s</span></div> <span class="user-name">Shahadad</span></li>
+      <li class="sidebar-user" href="#">
+        <div class="js-profile-pic">
+        </div> 
+        <span class="user-name js-user-name">User</span>
+      </li>
 
       <span class="sidebar-break"></span>
     </ul>
