Refactor: Minimize Code

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
       <span>Profile</span>
     </button>
   </nav>
-  
+  <div id="logout-bg" class="blur-bg"></div>
+
   <script type="module" src="src/app.js"></script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
 </body>
