--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <li class="sidebar-ctgry"><i class="fa-solid fa-shapes"></i> Categories</li>
       
-      <li class="sidebar-transfer"></i> 
+      <li class="sidebar-transfer"> 
         <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24"><path d="M16.59 9H15V4c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v5H7.41c-.89 0-1.34 1.08-.71 1.71l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.63-.63.19-1.71-.7-1.71M5 19c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H6c-.55 0-1 .45-1 1"></path></svg>
         Transfer
       </li>
@@ -68,6 +68,8 @@
       <li class="sidebar-issue" href="#"><i class="fa-solid fa-bug"></i> Report Issue</li>
 
       <span class="sidebar-break"></span>
+
+      <li class="sidebar-install" href="#"> <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24"><path d="M20 17H4V5h8V3H4c-1.1 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v1c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-1h4c1.1 0 2-.9 2-2v-3h-2z"></path><path d="M17.71 13.29 21.3 9.7c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L18 10.17V4c0-.55-.45-1-1-1s-1 .45-1 1v6.17l-1.89-1.88a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41l3.59 3.59c.4.39 1.03.39 1.42 0"></path></svg> Install App</li>
 
       <li class="sidebar-logout" href="#"><i class="fa-solid fa-sign-out"></i> Logout</li>
 
