Fix: all demo html pages

--- a/demo-pages/transfer.html
+++ b/demo-pages/transfer.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo App - Task</title>
+  <title>Todo App - Transfer Tasks</title>
   <link rel="stylesheet" href="../style/index.css">
-  <link rel="stylesheet" href="../style/task/task.css">
+  <link rel="stylesheet" href="../style/add-task/add-task.css">
 
   <style>
     :root {
@@ -44,7 +44,7 @@
       <div class="angle">
         <i class="fa-solid fa-angle-left"></i>
       </div>
-      <div class="text">Task Details</div>
+      <div class="text">Transfer Tasks</div>
       <div class="user">
         <div><i class="fa-solid fa-user user-icon"></i></div>
         <span class="tooltip">User</span>
@@ -52,64 +52,7 @@
     </div>
   </header>
 
-
   <main class="main">
-    <div class="card">
-      <h2 class="heading">Task: <span>Demo Task</span></h2>
-      <table>
-        <tbody>
-          <tr id="emoji">
-            <th>Emoji:</th>
-            <td><i>none</i></td>
-          </tr>
-          <tr id="id">
-            <th>ID:</th>
-            <td></td>
-          </tr>
-          <tr id="description">
-            <th>Description:</th>
-            <td></td>
-          </tr>
-          <tr id="color">
-            <th>Color:</th>
-            <td>
-              <span></span> #B624FF
-            </td>
-          </tr>
-          <tr id="created">
-            <th>Created:</th>
-            <td></td>
-          </tr>
-          <tr id="deadline">
-            <th>Task deadline:</th>
-            <td></td>
-          </tr>
-          <tr id="done">
-            <th>Done:</th>
-            <td>
-              <i class="fa-solid fa-check"></i> true
-            </td>
-          </tr>
-          <tr id="pinned">
-            <th>Pinned:</th>
-            <td>
-              <i class="fa-solid fa-xmark"></i>false
-            </td>
-          </tr>
-          <tr id="category">
-            <th>Category:</th>
-            <td>
-              <ul>
-                <li>
-                    <span class="emoji">🏢</span>
-                    Home
-                  </li>
-              </ul>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
   </main>
 
     
