Add ripple effect on home page

--- a/demo-pages/home.html
+++ b/demo-pages/home.html
@@ -261,7 +261,7 @@
           <i class="fa-solid fa-thumbtack"></i>
           <span>Pin</span>
         </div>
-        <div>
+        <div id="select">
           <i class="fa-regular fa-circle-dot"></i>
           <span>Select</span>
         </div>
@@ -269,7 +269,7 @@
           <i class="fa-solid fa-circle-info"></i>
           <span>Task details</span>
         </div>
-        <div>
+        <div id="share">
           <i class="fa-regular fa-share-from-square"></i>
           <span>Share</span>
         </div>
