Make loading svg responsiveness

--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
   <div id="root"></div>
 
   <div class="loading">
-    <svg>
-      <circle cx="40" cy="40" r="40"></circle>
+    <svg class="big">
+      <circle cx="35" cy="35" r="35"></circle>
+    </svg>
+
+    <svg class="small">
+      <circle cx="25" cy="25" r="25"></circle>
     </svg>
   </div>
 
