--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="style/index.css">
   <style id="theme"></style>
 </head>
-<body>
+<body class="no-select">
   <header id="header" style="display: none;">
     <div class="header-container">
       <div class="angle">
