--- a/index.html
+++ b/index.html
@@ -133,5 +133,6 @@
 
   <script type="module" src="src/app.js"></script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
+  <script src="./assets/libraries/qrious.min.js"></script>
 </body>
 </html>
