--- a/demo-pages/home.html
+++ b/demo-pages/home.html
@@ -133,6 +133,16 @@
                 <span>3/15/2024 • 11:04:00 AM • tomorrow</span>
               </div>
 
+              <div class="shared">
+                <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
+                  <path
+                    d="M17 7h-3c-.55 0-1 .45-1 1s.45 1 1 1h3c1.65 0 3 1.35 3 3s-1.35 3-3 3h-3c-.55 0-1 .45-1 1s.45 1 1 1h3c2.76 0 5-2.24 5-5s-2.24-5-5-5m-9 5c0 .55.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1H9c-.55 0-1 .45-1 1m2 3H7c-1.65 0-3-1.35-3-3s1.35-3 3-3h3c.55 0 1-.45 1-1s-.45-1-1-1H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h3c.55 0 1-.45 1-1s-.45-1-1-1">
+                  </path>
+                </svg>
+
+                Shared by User
+            </div>
+
               <div class="task-categories">
                 <div class="item">
                   <span class="category-emoji">🏠️</span>
@@ -149,7 +159,7 @@
               </div>
             </div>
           </div>
-          <div class="options">
+          <div class="menu">
             <button>
               <i class="fa-solid fa-ellipsis-vertical"></i>
             </button>
@@ -203,7 +213,7 @@
               </div>
             </div>
           </div>
-          <div class="options">
+          <div class="menu">
             <button>
               <i class="fa-solid fa-ellipsis-vertical"></i>
             </button>
@@ -257,7 +267,7 @@
               </div>
             </div>
           </div>
-          <div class="options">
+          <div class="menu">
             <button>
               <i class="fa-solid fa-ellipsis-vertical"></i>
             </button>
