Fix: sidebar responsiveness on large screen

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 
       <li class="sidebar-logout" href="#"><i class="fa-solid fa-sign-out"></i> Logout</li>
 
+      <div class="sidebar-space"></div>
+
       <li class="sidebar-settings" href="#"><i class="fa-solid fa-gear"></i> Settings</li>
 
       <span class="sidebar-break"></span>
