Fix: improve overall responsiveness across the app
- Adjusted layout for mobile screens

--- a/demo-pages/add-task.html
+++ b/demo-pages/add-task.html
@@ -173,7 +173,7 @@
     
       <li class="categories">
         <i class="fa-solid fa-shapes"></i>
-        <span>Categories</span>
+        <span class="heading">Categories</span>
       </li>
     
       <li class="add">
