--- a/demo-pages/profile.html
+++ b/demo-pages/profile.html
@@ -54,7 +54,7 @@
 
 
   <main class="main">
-    <div class="cart">
+    <div class="card">
       <div class="profile">
         <div class="js-profile-pic profile-pic">
         </div>
