--- a/demo-pages/home.html
+++ b/demo-pages/home.html
@@ -56,8 +56,8 @@
     <main class="main">
       <div class="progress">
         <div class="circle-container">
-          <svg width="80" height="80" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="40" cy="40" r="28" fill="none" stroke="#F2EBD3" stroke-width="8" class="draw-circle" />
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+            <circle viewBox="0 0 50 50" cx="50" cy="50" r="37" fill="none" stroke="#F2EBD3" class="draw-circle"/>
           </svg>
           <span class="number">50%</span>
         </div>
