Fix: style - alignment on tasks' top area

--- a/demo-pages/home.html
+++ b/demo-pages/home.html
@@ -112,12 +112,8 @@
               Pinned
             </div>
             <div class="top-area">
-              <div class="top-left">
-                <h3>Demo task</h3>
-              </div>
-              <div class="top-right">
-                <span class="create-time">yesterday 11:35 AM</span>
-              </div>
+              <h3>Demo task</h3>
+              <span class="create-date">yesterday 11:35 AM</span>
             </div>
 
             <div class="bottom-area">
@@ -176,12 +172,8 @@
               Pinned
             </div>
             <div class="top-area">
-              <div class="top-left">
-                <h3>Demo task</h3>
-              </div>
-              <div class="top-right">
-                <span class="create-time">yesterday 11:35 AM</span>
-              </div>
+              <h3>Demo task</h3>
+              <span class="create-date">yesterday 11:35 AM</span>
             </div>
 
             <div class="bottom-area">
@@ -230,12 +222,8 @@
               Pinned
             </div>
             <div class="top-area">
-              <div class="top-left">
-                <h3>Demo task</h3>
-              </div>
-              <div class="top-right">
-                <span class="create-time">yesterday 11:35 AM</span>
-              </div>
+              <h3>Demo task</h3>
+              <span class="create-date">yesterday 11:35 AM</span>
             </div>
 
             <div class="bottom-area">
@@ -565,12 +553,8 @@
               Pinned
             </div>
             <div class="top-area">
-              <div class="top-left">
-                <h3>Demo task</h3>
-              </div>
-              <div class="top-right">
-                <span class="create-time">09/24/2024</span>
-              </div>
+              <h3>Demo task</h3>
+              <span class="create-date">yesterday 11:35 AM</span>
             </div>
 
             <div class="bottom-area">
