Add manifest.json and update icons for PWA support

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <title>Todo App</title>
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/icon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/icon-32x32.png">
-  <link rel="icon" type="image/png" sizes="48x48" href="/assets/icons/icon-48x48.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-
+  <link rel="icon" type="image/svg+xml" href="assets/icons/icon.svg" />
+  <link rel="mask-icon" href="assets/icons/iconMaskable.png" color="#171D34" />
+  <link rel="apple-touch-icon" href="assets/icons/icon512.png" />
   <link rel="stylesheet" href="style/index.css">
+  <link rel="manifest" href="/manifest.json">
   <style id="theme"></style>
 </head>
 <body class="no-select">
