--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+  <meta name="theme-color" content="#EDEEF7"/>
   <title>Todo App</title>
   <link rel="icon" type="image/svg+xml" href="assets/icons/icon.svg" />
   <link rel="mask-icon" href="assets/icons/iconMaskable.png" color="#171D34" />
