--- a/index.html
+++ b/index.html
@@ -30,12 +30,8 @@
   <div id="root"></div>
 
   <div class="loading">
-    <svg class="big">
-      <circle cx="35" cy="35" r="35"></circle>
-    </svg>
-
-    <svg class="small">
-      <circle cx="25" cy="25" r="25"></circle>
+    <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+      <circle viewBox="0 0 50 50" cx="50" cy="50" r="40"></circle>
     </svg>
   </div>
 
