Add Open Graph meta tags for better SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="theme-color" content="#EDEEF7"/>
+  <!-- Open Graph meta tags -->
+  <meta property="og:title" content="JS To-Do App" />
+  <meta property="og:description" content="A Vanilla JS Todo App with features like task management, custom categories, sharing tasks via link, transfer tasks, themes, and more." />
+  <meta property="og:image" content="screenshots/ss.png" />
+  <meta property="og:url" content="https://js-cool-todo-app.netlify.app/" />
+  <meta property="og:type" content="app.website" />
+  
   <title>Todo App</title>
   <link rel="icon" type="image/svg+xml" href="assets/icons/icon.svg" />
   <link rel="mask-icon" href="assets/icons/iconMaskable.png" color="#171D34" />
