Update og meta tags

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <!-- Open Graph meta tags --> 
   <meta property="og:title" content="JS Todo App" />
   <meta property="og:description" content="A Vanilla JavaScript Todo App with task management, custom categories, transfer, sharing tasks via link or QR code, themes, and more." />
-  <meta property="og:image" content="https://github.com/shahadad-shishir/TodoApp/blob/master/screenshots/ss.png" />
+  <meta property="og:image" content="https://js-cool-todo-app.netlify.app/screenshots/ss.png" />
   <meta property="og:url" content="https://js-cool-todo-app.netlify.app/" />
   <meta property="og:type" content="website" />
-  <meta property="article:author" content="GitHub@shahadad-shishir" />
   
   <title>Todo App</title>
   <link rel="icon" type="image/svg+xml" href="assets/icons/icon.svg" />
