Update og meta tags

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="theme-color" content="#EDEEF7"/>
   <!-- Open Graph meta tags --> 
   <meta property="og:title" content="JS Todo App" />
-  <meta property="og:description" content="A Vanilla JavaScript Todo App with task management, custom categories, transfer, sharing tasks via link or QR code, themes, and more." />
-  <meta property="og:image" content="https://js-cool-todo-app.netlify.app/screenshots/ss.png" />
-  <meta property="og:url" content="https://js-cool-todo-app.netlify.app/" />
   <meta property="og:type" content="website" />
+  <meta name="image" property="og:image" content="https://js-cool-todo-app.netlify.app/screenshots/ss.png" />
+  <meta property="og:description" content="A Vanilla JavaScript Todo App with task management, custom categories, transfer, sharing tasks via link or QR code, themes, and more." />
+  <meta name="author" content="GitHub@shahadad-shishir">
+  <meta property="og:url" content="https://js-cool-todo-app.netlify.app/" />
   
   <title>Todo App</title>
   <link rel="icon" type="image/svg+xml" href="assets/icons/icon.svg" />
